src/compiler/snapshots/isa__compiler__lexer__tests__ident-10.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"_char\").next()"
---
Some(
    Ok(
        Spand {
            data: Ident(
                "_char",
            ),
            span: SpanData { file_id: 0, start: 0, end: 5 },
        },
    ),
)
