src/compiler/snapshots/isa__compiler__lexer__tests__ident-11.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"real_\").next()"
---
Some(
    Ok(
        Spand {
            data: Ident(
                "real_",
            ),
            span: SpanData { file_id: 0, lo: 0, hi: 5 },
        },
    ),
)
