src/compiler/snapshots/isa__compiler__lexer__tests__ident-12.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"Type\").next()"
---
Some(
    Ok(
        Spand {
            data: Ident(
                "Type",
            ),
            span: SpanData { file_id: 0, start: 0, end: 4 },
        },
    ),
)
