src/compiler/snapshots/isa__compiler__lexer__tests__ident-13.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"aliass\").next()"
---
Some(
    Ok(
        Spand {
            data: Ident(
                "aliass",
            ),
            span: SpanData { file_id: 0, lo: 0, hi: 6 },
        },
    ),
)
