src/compiler/snapshots/isa__compiler__lexer__tests__ident-14.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"classes\").next()"
---
Some(
    Ok(
        Spand {
            data: Ident(
                "classes",
            ),
            span: SpanData { file_id: 0, start: 0, end: 7 },
        },
    ),
)
