src/compiler/snapshots/isa__compiler__lexer__tests__ident-15.snap
---
source: src/compiler/lexer.rs
expression: "Lexer :: new(0, \"_8instance\").next()"
---
Some(
    Ok(
        Spand {
            data: Ident(
                "_8instance",
            ),
            span: SpanData { file_id: 0, start: 0, end: 10 },
        },
    ),
)
